[project]
name = "svs-unet-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "librosa==0.10.1",
    "matplotlib>=3.10.7",
    "mir-eval>=0.8.2",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "setuptools>=80.9.0",
    "soundfile==0.12.1",
    "stempeg==0.2.3",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
]
